# file-service

./: README.md  pyproject.toml
app/: config.py  main.py
app/api/: files.py
app/schemas/: files.py
app/services/: file_service.py
app/storage/: base.py  local.py
